addressed spacing issues, removed unnecessary comments

--- a/style.css
+++ b/style.css
@@ -46,28 +46,19 @@ svg#vis1 {
 	display: flex;
 	flex-direction:row;
 	justify-content: center;
-	/*height:500px;*/
-	/*width:980px;*/
 }
 
 svg#vis2 {
 	display: flex;
 	flex-direction:row;
 	justify-content: center;
-	/*height:500px;*/
-	/*width:980px;*/
 }
 
 
 svg#vis3 {
-	/*position: absolute;*/
-	/*top: 0;*/
-	/*left: 0;*/
 	display: flex;
 	flex-direction:row;
 	justify-content: center;
-	/*height:500px;*/
-	/*width:980px;*/
 }
 .visCaption {
 	display: flex;
@@ -106,4 +97,14 @@ svg#vis3 {
 
 h3.question-header {
 	border-bottom: 2px solid #000;
+}
+
+.tooltip {
+	position: absolute;
+	text-align: center;
+	padding: 8px;
+	margin-top: -20px;
+	font: 10px sans-serif;
+	background: #ddd;
+	pointer-events: none;
 }
